# mkl-cg

./: CMakeLists.txt
include/cg/: cg.h
include/cli/: parser.h
src/: cg.cpp  cli.cpp  parser.cpp
test/: CMakeLists.txt  cg_test.cpp
test/data/: 494_bus_ichol.mat
